[gd_scene load_steps=4 format=2]

[ext_resource path="res://1. GFX/GUI/TalkBoxBlack.png" type="Texture" id=1]
[ext_resource path="res://4. Scenes/Menus/theme.tres" type="Theme" id=2]
[ext_resource path="res://4. Scenes/Menus/settings.gd" type="Script" id=3]

[node name="settings" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.749161
margin_right = -0.749146
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 273.0
margin_top = 147.0
margin_right = -273.0
margin_bottom = -147.0
texture = ExtResource( 1 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 478.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
text = "Settings"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 54.0
margin_right = 478.0
margin_bottom = 254.726
rect_min_size = Vector2( 0, 200.726 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 237.0
margin_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 205, 0 )
custom_constants/separation = 5

[node name="musicLabel" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 205.0
margin_bottom = 26.0
text = "Music"

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 205.0
margin_bottom = 57.0
grow_horizontal = 2

[node name="musicSlider" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 130.0
margin_bottom = 16.0
rect_min_size = Vector2( 130, 0 )
value = 60.0

[node name="musicPrcntLabel" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 134.0
margin_right = 196.0
margin_bottom = 26.0
text = "100%"

[node name="fxLabel" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 205.0
margin_bottom = 88.0
text = "Sound fx"

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 205.0
margin_bottom = 119.0
grow_horizontal = 2

[node name="sfxSlider" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 130.0
margin_bottom = 16.0
rect_min_size = Vector2( 130, 0 )
value = 60.0

[node name="sfxPrcntLabel" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 134.0
margin_right = 196.0
margin_bottom = 26.0
text = "100%"

[node name="VBoxContainer2" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 241.0
margin_right = 446.0
margin_bottom = 200.0
rect_min_size = Vector2( 205, 0 )

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 258.0
margin_right = 478.0
margin_bottom = 288.0
alignment = 1

[node name="confirmButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 176.0
margin_right = 302.0
margin_bottom = 30.0
text = "Confirm"

[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/musicSlider" to="." method="_on_musicSlider_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/sfxSlider" to="." method="_on_sfxSlider_value_changed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer2/confirmButton" to="." method="_on_confirmButton_pressed"]
